# web_programming_laboratories_0

./: LICENSE  Makefile  README.md  pyproject.toml
report_sources/: main.tex
web_programming_laboratories_0/: task0.py  task1.py  task2.py  task3.py  task4.py  task5.py
web_programming_laboratories_0/extras/: task1.py  task2.py  task3.py  task4.py
